--- a/gameUI.html
+++ b/gameUI.html
@@ -21,8 +21,7 @@
     <main>
         <p class="container-button" id="container-button-getStarted">
             <button class="btn btn-primary" id="button-startGame">
-                <a href="gameUI.html">get started</a> 
-            </button>
+                get started</button>
         </p>
         
         <div class="container-button-howToPlay">
