--- a/gameUI.html
+++ b/gameUI.html
@@ -16,11 +16,19 @@
 </head>
 <body>
     <header>
-        <h1>Rock - Paper - Scissors</h1>
+        <h1><a href="index.html">Rock - Paper - Scissors</a></h1>
     </header>
 
     <main id="backgroundOfGame">
         <h2 class="transparent-white">Round <span id="nbrOfRound"></span></h2>
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                1 of 2
+              </div>
+              <div class="col">
+                2 of 2
+        </div>
         <div class="playerComputerChoices">
             <div class="player"></div>
             <div class="computer"></div>
