--- a/gameUI.html
+++ b/gameUI.html
@@ -21,6 +21,7 @@
 
     <main id="backgroundOfGame">
         <h2 class="transparent-white">Round <span id="nbrOfRound"></span></h2>
+        
         <div class="container text-center">
             <div class="row">
               <div class="col">
@@ -33,6 +34,33 @@
             <div class="player"></div>
             <div class="computer"></div>
         </div>
+
+        <!--User clicks on the card of his decision-->
+        <div class="card-group">
+            <div class="card">
+              <img src="Pictures/stonePlayer.png" class="card-img-top" alt="Rock">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="Pictures/paperPlayer.png" class="card-img-top" alt="Paper">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img src="Pictures/scissorsPlayer.png" class="card-img-top" alt="Scissors">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              </div>
+            </div>
+          </div>
+
+        <!--Feedback: WinnerOfRound-->
         <div class="feedbackWinLoose"></div>           
     </main>
 
