--- a/gameUI.html
+++ b/gameUI.html
@@ -20,7 +20,7 @@
     </header>
 
     <main id="backgroundOfGame">
-        <h2 class="transparent-white">Round <span id="nbrOfRound"></span></h2>
+        <h2 class="transparent-white">Round <span id="nbrOfRound">0</span></h2>
         
         <div class="container text-center">
             <div class="row">
@@ -41,21 +41,21 @@
               <img src="Pictures/stonePlayer.png" class="card-img-top" alt="Rock">
               <div class="card-body">
                 <h5 class="card-title">Rock</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">If you choose Rock, you will win against Scissors but lose against Paper.</p>
               </div>
             </div>
             <div class="card">
               <img src="Pictures/paperPlayer.png" class="card-img-top" alt="Paper">
               <div class="card-body">
                 <h5 class="card-title">Paper</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">If you choose Paper, you will win against Rock but lose against Scissors.</p>
               </div>
             </div>
             <div class="card">
               <img src="Pictures/scissorsPlayer.png" class="card-img-top" alt="Scissors">
               <div class="card-body">
                 <h5 class="card-title">Scissors</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">If you choose Scissors, you will win against Paper but lose against Rock.</p>
               </div>
             </div>
           </div>
