--- a/gameUI.html
+++ b/gameUI.html
@@ -25,10 +25,10 @@
         <div class="container text-center">
             <div class="row">
               <div class="col">
-                1 of 2
+                <img src="..." class="img-fluid" alt="ChoiceOfComputer">
               </div>
               <div class="col">
-                2 of 2
+                <img src="..." class="img-fluid" alt="YourChoice">
         </div>
         <div class="playerComputerChoices">
             <div class="player"></div>
