--- a/gameUI.html
+++ b/gameUI.html
@@ -54,16 +54,13 @@
             </div>
           </div>
           
-          <h3>Choices</h3>
-        
+        <h3>Choices</h3>
         <div class="choicesOfRound">
             <div>Computer</div>
-            <div>Column</div>
-            <div>Column</div>
+            <div class="choiceComputer"></div>
+            <div class="choicePlayer"></div>
             <div>Player</div>
         </div>
-
-        <!--Feedback: WinnerOfRound-->
         <div class="feedbackWinLoose transparent-white"></div>           
     </main>
 
