start: choose nbr rounds

--- a/gameUI.html
+++ b/gameUI.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleUI.css">
     <link rel="stylesheet" href="styleOfGame.css"> 
+    <script src="gameplay.js" defer></script>
     <title>Rock-Paper-Scissors</title>
     <meta name="author" content="Stephanie Beck" />
     <meta
@@ -23,9 +24,9 @@
         <div id="start-chooseNbrRound" class="transparent-black">
           <p>How many rounds would you like to play?</p>
           <div class="row-nbrOfRounds">
-            <button>3</button>
-            <button>5</button>
-            <button>10</button>
+            <button class="nbrOfRounds">3</button>
+            <button class="nbrOfRounds">5</button>
+            <button class="nbrOfRounds">10</button>
           </div>
         </div>
 
