--- a/gameUI.html
+++ b/gameUI.html
@@ -21,6 +21,7 @@
     </header>
 
     <main id="backgroundOfGame">
+      <div id="mainGameplay">
         <div id="start-chooseNbrRound" class="transparent-black">
           <p>How many rounds would you like to play?</p>
           <div class="row-nbrOfRounds">
@@ -70,6 +71,8 @@
             <div class="choicePlayer"></div>
             <div>Player</div>
         </div>
+      </div>
+
         <div class="feedbackWinLoose transparent-white"></div>           
     </main>
 
