--- a/gameUI.html
+++ b/gameUI.html
@@ -36,6 +36,7 @@
         
         <div class="card-group">
             <div class="card" id="rock-card">
+              <div class="overlay"></div>
               <div>
                 <img src="Pictures/stonePlayer.png" class="card-img-top" alt="Rock">
               </div>
@@ -45,6 +46,7 @@
               </div>
             </div>
             <div class="card" id="paper-card">
+              <div class="overlay"></div>
               <div>
                 <img src="Pictures/paperPlayer.png" class="card-img-top" alt="Paper">
               </div>
@@ -54,6 +56,7 @@
               </div>
             </div>
             <div class="card" id="scissors-card">
+              <div class="overlay"></div>
               <div>
                 <img src="Pictures/scissorsPlayer.png" class="card-img-top" id="scissors-img" alt="Scissors">
               </div>  
