--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container-getStarted">
             <p class="container-button">
                 <button class="btn btn-primary" id="button-startGame">
-                    <a href="gameUI.html">let's play</a> 
+                    <a href="interface.html">let's play</a> 
                 </button>  
             </p>
         </div>
