--- a/interface.html
+++ b/interface.html
@@ -76,7 +76,8 @@
         </div>
       </div>
 
-        <div class="feedbackWinLoose transparent-white"></div>           
+        <div class="feedbackWinLoose transparent-white"></div>
+        <div class="congrats"></div>           
     </main>
 
     <footer>
