feedback per round

--- a/interface.html
+++ b/interface.html
@@ -74,10 +74,11 @@
             <div class="choicePlayer"></div>
             <div>Player</div>
         </div>
+        <div class="feedbackRound transparent-white"></div>
       </div>
 
-        <div class="feedbackWinLoose transparent-white"></div>
-        <div class="congrats"></div>           
+      <div class="finalFeedback transparent-white"></div>
+      <div class="congrats"></div>           
     </main>
 
     <footer>
