--- a/interface.html
+++ b/interface.html
@@ -77,7 +77,7 @@
         <div class="feedbackRound transparent-white"></div>
       </div>
 
-      <div class="finalFeedback transparent-white"></div>
+      <div class="finalFeedback"></div>
       <div class="congrats"></div>           
     </main>
 
