--- a/interface.html
+++ b/interface.html
@@ -70,8 +70,8 @@
         <h3>Choices</h3>
         <div class="choicesOfRound">
             <div>Computer</div>
-            <div class="choiceComputer"></div>
-            <div class="choicePlayer"></div>
+            <div class="choiceComputer">-</div>
+            <div class="choicePlayer">-</div>
             <div>Player</div>
         </div>
         <div class="feedbackRound transparent-white"></div>
