--- a/interface.html
+++ b/interface.html
@@ -23,11 +23,11 @@
     <main id="backgroundOfGame">
       <div id="mainGameplay">
         <div id="start-chooseNbrRound" class="transparent-black">
-          <p>How many rounds would you like to play?</p>
+          <h2>How many rounds would you like to play?</h2>
           <div class="row-nbrOfRounds">
-            <button class="nbrOfRounds">3</button>
-            <button class="nbrOfRounds">5</button>
-            <button class="nbrOfRounds">10</button>
+            <button class="nbrOfRounds btn btn-primary">3</button>
+            <button class="nbrOfRounds btn btn-primary">5</button>
+            <button class="nbrOfRounds btn btn-primary">10</button>
           </div>
         </div>
 
