--- a/interface.html
+++ b/interface.html
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <h2 class="transparent-white">Round<span id="nbrOfRound">0</span></h2>
+        <h2 class="transparent-white">Round&nbsp;<span id="nbrOfRound">0</span></h2>
         <h3>Make a choice</h3>
         
         <div class="card-group">
