--- a/interface.html
+++ b/interface.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleUI.css">
-    <link rel="stylesheet" href="styleOfGame.css"> 
     <script src="gameplay.js" defer></script>
     <title>Rock-Paper-Scissors</title>
     <meta name="author" content="Stephanie Beck" />
@@ -14,6 +12,8 @@
     <link rel="icon" href="Pictures/game-icon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
+    <link rel="stylesheet" href="styleUI.css">
+    <link rel="stylesheet" href="styleOfGame.css"> 
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
         <div id="start-chooseNbrRound" class="transparent-black">
           <h2>How many rounds would you like to play?</h2>
           <div class="row-nbrOfRounds">
-            <button class="nbrOfRounds btn btn-primary">3</button>
+            <button class="nbrOfRounds btn btn-primary" id="border-white">3</button>
             <button class="nbrOfRounds btn btn-primary">5</button>
             <button class="nbrOfRounds btn btn-primary">10</button>
           </div>
