--- a/interface.html
+++ b/interface.html
@@ -25,7 +25,7 @@
         <div id="start-chooseNbrRound" class="transparent-black">
           <h2>How many rounds would you like to play?</h2>
           <div class="row-nbrOfRounds">
-            <button class="nbrOfRounds btn btn-primary" id="border-white">3</button>
+            <button class="nbrOfRounds btn btn-primary">3</button>
             <button class="nbrOfRounds btn btn-primary">5</button>
             <button class="nbrOfRounds btn btn-primary">10</button>
           </div>
