--- a/interface.html
+++ b/interface.html
@@ -42,7 +42,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Rock</h5>
-                <p class="card-text">If you choose Rock, you will win against Scissors but lose against Paper.</p>
+                <p class="card-text d-none d-md-block">If you choose Rock, you will win against Scissors but lose against Paper.</p>
               </div>
             </div>
             <div class="card" id="paper-card">
@@ -52,7 +52,7 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title">Paper</h5>
-                <p class="card-text">If you choose Paper, you will win against Rock but lose against Scissors.</p>
+                <p class="card-text d-none d-md-block">If you choose Paper, you will win against Rock but lose against Scissors.</p>
               </div>
             </div>
             <div class="card" id="scissors-card">
@@ -62,7 +62,7 @@
               </div>  
               <div class="card-body">
                 <h5 class="card-title">Scissors</h5>
-                <p class="card-text">If you choose Scissors, you will win against Paper but lose against Rock.</p>
+                <p class="card-text d-none d-md-block">If you choose Scissors, you will win against Paper but lose against Rock.</p>
               </div>
             </div>
           </div>
