--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="Pictures/game-icon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
-    <link rel="stylesheet" href="styleUI.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
         <div class="container-getStarted">
             <p class="container-button">
                 <button class="btn btn-primary" id="button-startGame">
-                    <a href="interface.html">let's play</a> 
+                    <a href="gameUI.html">let's play</a> 
                 </button>  
             </p>
         </div>
