--- a/gameUI.html
+++ b/gameUI.html
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <h2 class="transparent-white counter-rounds">Round</h2>
+        <h2 class="transparent-white">Round&nbsp;<span id="nbrOfRound">0</span></h2>
         
         <h3>Make a choice</h3>
         
