visibility feedback of round

--- a/gameUI.html
+++ b/gameUI.html
@@ -74,7 +74,7 @@
             <div class="choiceComputer">-</div>
             <div class="choicePlayer">-</div>
             <div>Player</div>
-            <div class="feedbackRound"></div>
+            <div class="feedbackRound">-</div>
         </div>
         
       </div>
