--- a/gameUI.html
+++ b/gameUI.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="Pictures/game-icon.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.12.0/tsparticles.confetti.bundle.min.js" defer></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleOfGame.css"> 
 </head>
@@ -80,7 +81,7 @@
       </div>
 
       <div class="finalFeedback"></div>
-      <div class="congrats"></div>           
+      <div class="congrats" id="confetti"></div>           
     </main>
 
     <footer>
